# inmcli

./: Cargo.toml
src/: main.rs
