[package]
name = "inmcli"
version = "0.1.0"
authors = ["Marco Radocchia <marco.radocchia@outlook.com"]
edition = "2021"
rust-version = "1.67.1"
license = "GPL-3.0-only"
repository = "https://github.com/marcoradocchia/inmcli/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
colored = "2.1.0"
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
spinoff = { git = "https://github.com/marcoradocchia/spinoff", default-features = false }

[profile.release]
opt-level = 3     # optimize for speed (max level)
lto = true        # link-time-optimization
strip = true      # strip symbols from binary
codegen-units = 1 # longer compile times, but provides optimizations
panic = "abort"   # abort on panic (no unwinding => smaller binary size)
